--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2024.12.14
 cloudinary==1.41.0
 dj-database-url==2.3.0
 Django==5.1.4
+django-crispy-forms==2.3
 gunicorn==23.0.0
 packaging==24.2
 psycopg==3.2.3
